--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,22 +1,34 @@
 .backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 999;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .modal {
-    min-width: 65%;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1.5rem 2rem;
-    max-height: 95%;
-    overflow-y: auto;
+	width: 95%;
+	background-color: #fff;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 1.5rem 2rem;
+	max-height: 95%;
+	overflow-y: auto;
+}
+
+@media (min-width: 768px) {
+	.modal {
+		width: 75%;
+	}
+}
+
+@media (min-width: 992px) {
+	.modal {
+		width: 65%;
+	}
 }
